# btc-5m-binary-fair-value

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PRD.md  README.md  config.py  dashboard.py  db.py  logging_setup.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
btc_5m_fv/backtest/: conditional.py  harness.py  metrics.py
btc_5m_fv/connectors/: __init__.py  binance.py  chainlink_settlement.py  registry.py
btc_5m_fv/execution/: gate.py  live.py  paper.py
btc_5m_fv/ops/: controller.py  incidents.py  telemetry.py
btc_5m_fv/storage/: recorder.py  replay.py
btc_5m_fv/strategy/: signal.py
btc_bot/: adaptive.py  backtest.py  calibration.py  calibration_fit.py  chronos_signal.py  controller.py  paper.py  params.py  params_apply.py  params_propose.py  strategy.py
btc_bot/shadow/: __init__.py  fees.py  ledger.py  runner.py  signals.py  types.py
docs/: ARCHITECTURE.md  BACKTESTING.md  CHRONOS_INTEGRATION.md  CODE_MAP.md  FILE_MAP.md  OPERATIONS_RUNBOOK.md  POSTMORTEM_2026-07.md  RESEARCH_LOOP.md  ROADMAP.md
docs/specs/: 2026-06-16-loss-halt-operator-controls.md
tasks/: 2026-06-16-self-updating-agent-docs-design.md  2026-06-16-self-updating-agent-docs-plan.md  lessons.md  todo.md
tests/: conftest.py
tests/e2e/: test_dashboard_flow.py
tests/integration/: test_connector_integration.py
tests/unit/: test_adaptive.py  test_backtest_harness.py  test_calibration.py  test_chainlink_lead_lag.py  test_chronos_stub.py  test_connectors.py  test_core_types.py  test_dashboard.py  test_data_integrity.py  test_datastreams_tieout.py  test_gen_docs.py  test_live_executor.py  test_live_setup.py  test_live_wiring.py  test_loss_halt_controls.py  test_maker_backtest.py  test_offline_replay.py  test_paper_execution.py  test_params.py  test_reconcile_ledger.py  test_redaction.py  test_regime_attribution.py  test_replay.py  test_replay_race.py  test_risk_gate.py  test_risk_service.py  test_runtime_config.py  test_settle_style.py  test_settlement_http.py  test_shadow_fees.py  test_shadow_ledger.py  test_shadow_performance.py  test_shadow_runner.py  test_shadow_signals.py  test_strategy.py  (+2 more)
tools/: chainlink_lead_lag.py  clear_auto_pause.py  datastreams_tieout.py  fetch_polymarket_trades.py  gen_docs.py  live_detect_wallet.py  live_preflight.py  live_setup.py  maker_backtest.py  offline_replay.py  reconcile_live_ledger.py  regime_attribution.py  replay_race.py  shadow_performance.py
(+24 files in other folders)
