[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-5m-fv"
version = "0.2.0"
description = "BTC 5-minute binary fair-value trading system"
requires-python = ">=3.11"
dependencies = [
    # http2 extra (h2) is REQUIRED, not optional: the Polymarket crypto-price
    # reference endpoint is Cloudflare-protected and 403s HTTP/1.1 requests, so
    # the settlement client must speak HTTP/2 (#120).
    "httpx[http2]>=0.27",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn>=0.29",
    "py-clob-client-v2>=1.0",
    "websockets>=12",
]

[project.optional-dependencies]
# `polars` + `huggingface-hub` back the offline replay/lead-lag tools and their
# tests (tests/unit/test_offline_replay.py, test_chainlink_lead_lag.py). `numpy`
# backs tools/regime_attribution.py + test_regime_attribution.py (#128). They
# live in requirements.txt but were missing here, so CI's `pip install -e .[test]`
# never installed them and those modules broke pytest COLLECTION — failing the
# test job AND docs-drift (gen_docs can't import the tool) (#79, #128). Pinned to
# match requirements.txt.
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "polars>=1.17", "huggingface-hub>=0.26", "numpy>=1.26"]
dev = ["ruff>=0.4", "mypy>=1.9"]
# One-time live onboarding only (tools/live_setup.py): deposit-wallet deploy.
# Day-to-day trading uses py-clob-client-v2, a core dependency.
setup = ["polymarket-client"]

[tool.setuptools]
packages = ["btc_5m_fv", "btc_bot"]
py-modules = ["db", "config", "logging_setup", "main", "dashboard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# E402 (module-import-not-at-top): these modules insert the project root into
# sys.path before importing top-level modules (config, db, logging_setup) or
# the package itself, so those imports intentionally follow the sys.path
# bootstrap and cannot be hoisted to the top of the file.
"btc_5m_fv/execution/live.py" = ["E402"]
"btc_5m_fv/ops/dashboard/app.py" = ["E402"]
"tests/e2e/test_dashboard_flow.py" = ["E402"]
"tests/unit/test_dashboard.py" = ["E402"]
"tools/backtest_btc_strategy.py" = ["E402"]
"tools/demo_snapshot.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
